--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.11"
   }
 }
